production/qasystem/qasystem.yaml
apiVersion: v1
kind: Service
metadata:
  name: qasystem-svc
spec:
  selector:
    app: qasystem
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qasystem-deployment
  labels:
    app: qasystem
spec:
  selector:
    matchLabels:
      app: qasystem
  template:
    metadata:
      labels:
        app: qasystem
    spec:
      containers:
        - name: qasystem-c
          image: sontapcode/qa-agent:release-145df08feb53b2ae8fc5ec05f95f13c999811268
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8501
