production/qasystem/qasystem_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qasystem-ingress
  namespace: app # <-- Sửa ở đây
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qasystem-svc
                port:
                  number: 8501
